crates/wdl-grammar/tests/parsing/imports-symbolic-unterminated-group/source.errors
error: expected `}`, but found `from` keyword
  ┌─ tests/parsing/imports-symbolic-unterminated-group/source.wdl:3:20
  │
3 │ import { sort, cut from openwdl/csvkit
  │        -           ^^^^ unexpected `from` keyword
  │        │            
  │        this `{` is not matched

